<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/icon_minutes_to_convert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@id/minutes_to_convert"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/minutes_to_convert"
            app:srcCompat="@drawable/ic_time" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/minutes_to_convert"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:hint="@string/wpisz_minuty"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/minutes_to_convert_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:textAlignment="center" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/icon_konwertuj_na"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@id/konwertuj_na"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/konwertuj_na"
            app:srcCompat="@drawable/ic_convert" />

        <TextView
            android:id="@+id/konwertuj_na"
            style="@style/Widget.TimeConverter.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/konwertuj_na"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/minutes_to_convert" />

        <RadioGroup
            android:id="@+id/convert_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@id/option_seconds"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/konwertuj_na">

            <RadioButton
                android:id="@+id/option_seconds"
                style="@style/Widget.TimeConverter.CompoundButton.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sekundy" />

            <RadioButton
                android:id="@+id/option_hours"
                style="@style/Widget.TimeConverter.CompoundButton.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/godziny" />

            <RadioButton
                android:id="@+id/option_days"
                style="@style/Widget.TimeConverter.CompoundButton.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dni" />
        </RadioGroup>

        <ImageView
            android:id="@+id/ic_round_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@id/round_up_switch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/round_up_switch"
            app:srcCompat="@drawable/ic_round_up" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/round_up_switch"
            style="@style/Widget.TimeConverter.CompoundButton.Switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:checked="true"
            android:text="@string/zaokraglic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/convert_options" />

        <Button
            android:id="@+id/calculate_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/oblicz"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/round_up_switch" />

        <TextView
            android:id="@+id/convert_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:shadowColor="@color/purple_700"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="1"
            android:textColor="@color/purple_200"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/calculate_button"
            tools:text="@string/wynik" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>